force-app/main/default/objects/Metric_Scorecard__c/Metric_Scorecard__c.object-meta.xml
<CustomObject>
    <description>Configuration for scorecard</description>
    <label>Metric Scorecard</label>
    <nameField>
        <label>Metric Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metric Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>