force-app/main/default/objects/Metric_Scorecard__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Goal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>