force-app/main/default/objects/Metric_Scorecard__c/fields/Goal_Progress_Cap__c.field-meta.xml
<CustomField>
    <fullName>Goal_Progress_Cap__c</fullName>
    <description>Maximum progress to goal in overall score. If left blank, no cap will apply.</description>
    <inlineHelpText>Maximum progress to goal in overall score. If left blank, no cap will apply.</inlineHelpText>
    <label>Goal Progress Cap</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>