force-app/main/default/objects/Metric_Scorecard__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weighted Average</fullName>
                <default>true</default>
                <label>Weighted Average</label>
            </value>
            <value>
                <fullName>Standard Average</fullName>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>