force-app/main/default/objects/Metric_Scorecard__c/fields/Hide_Metric_Progress_Bars__c.field-meta.xml
<CustomField>
    <fullName>Hide_Metric_Progress_Bars__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this box is checked, the individual metrics will not display a progress bar.  Only the total score will display a progress bar.</inlineHelpText>
    <label>Hide Metric Progress Bars</label>
    <type>Checkbox</type>
</CustomField>