force-app/main/default/objects/Metric_Scorecard__c/fields/MeetRequirementsPercent__c.field-meta.xml
<CustomField>
    <fullName>MeetRequirementsPercent__c</fullName>
    <defaultValue>85</defaultValue>
    <label>C Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>