force-app/main/default/objects/Metric_Scorecard__c/fields/Metric_Count__c.field-meta.xml
<CustomField>
    <fullName>Metric_Count__c</fullName>
    <label>Metric Count</label>
    <summaryForeignKey>Metric_Scorecard_Assignment__c.Metric_Scorecard__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>