force-app/main/default/objects/Metric_Scorecard__c/fields/Metric_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Metric_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a grouping of metrics tied to a separate scorecard</inlineHelpText>
    <label>Metric Grouping</label>
    <type>Checkbox</type>
</CustomField>