force-app/main/default/objects/Metric_Scorecard__c/fields/Metric_Scorecard_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_Scorecard_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Case Guided flow for lookup to metric scorecard.</description>
    <label>Metric Scorecard Name</label>
    <referenceTo>Metric_Scorecard__c</referenceTo>
    <relationshipLabel>Metric Scorecards</relationshipLabel>
    <relationshipName>Metric_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>