force-app/main/default/objects/Metric_Scorecard__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Account</fullName>
                <isActive>false</isActive>
                <label>Account</label>
            </value>
            <value>
                <fullName>amc__Role__c</fullName>
                <isActive>false</isActive>
                <label>amc__Role__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>