force-app/main/default/objects/Metric_Scorecard__c/fields/Projected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_End_Date__c</fullName>
    <label>Projected End Date</label>
    <type>Date</type>
</CustomField>