force-app/main/default/objects/Metric_Scorecard__c/fields/Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Role_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role Title</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Metric Scorecards</relationshipLabel>
    <relationshipName>Metric_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>