force-app/main/default/objects/Metric_Scorecard__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting General</fullName>
            </value>
            <value>
                <fullName>Agency Account Manager</fullName>
            </value>
            <value>
                <fullName>Agency Director</fullName>
            </value>
            <value>
                <fullName>Agency Project Manager</fullName>
            </value>
            <value>
                <fullName>Agency Sales Executive</fullName>
            </value>
            <value>
                <fullName>Agency Sales Staff</fullName>
            </value>
            <value>
                <fullName>AMG - Salesforce Support &amp; Product Development Partner User</fullName>
            </value>
            <value>
                <fullName>Automotive Sales Director</fullName>
            </value>
            <value>
                <fullName>Automotive Sales Rep</fullName>
            </value>
            <value>
                <fullName>Automotive Virtual Marketing Manager</fullName>
            </value>
            <value>
                <fullName>BDS</fullName>
            </value>
            <value>
                <fullName>BDS Hybrid</fullName>
            </value>
            <value>
                <fullName>BDS Maryville</fullName>
            </value>
            <value>
                <fullName>BDS New Hire</fullName>
            </value>
            <value>
                <fullName>BDS - Partner Account Manager</fullName>
            </value>
            <value>
                <fullName>BDS Stable</fullName>
            </value>
            <value>
                <fullName>BDS Team Lead</fullName>
            </value>
            <value>
                <fullName>BDS Training</fullName>
            </value>
            <value>
                <fullName>Bionic SDR</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Chief Operations Officer</fullName>
            </value>
            <value>
                <fullName>Corporate Graphic Designer</fullName>
            </value>
            <value>
                <fullName>Corporate Videographer</fullName>
            </value>
            <value>
                <fullName>Creative Director</fullName>
            </value>
            <value>
                <fullName>Creative Services Project Manager</fullName>
            </value>
            <value>
                <fullName>Creative Video Director</fullName>
            </value>
            <value>
                <fullName>Data Analyst</fullName>
            </value>
            <value>
                <fullName>Desktop Support Specialist</fullName>
            </value>
            <value>
                <fullName>Digital Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>