force-app/main/default/objects/Metric_Scorecard__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>User_Role__c</columns>
    <columns>Green_Percent__c</columns>
    <columns>Yellow_Percent__c</columns>
    <columns>MeetRequirementsPercent__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Metric_Count__c</columns>
    <columns>Role_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active</label>
</ListView>