force-app/main/default/objects/Metric_Scorecard__c/listViews/Active_with_no_Role_Title.listView-meta.xml
<ListView>
    <fullName>Active_with_no_Role_Title</fullName>
    <columns>NAME</columns>
    <columns>User_Role__c</columns>
    <columns>Green_Percent__c</columns>
    <columns>Yellow_Percent__c</columns>
    <columns>MeetRequirementsPercent__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Metric_Count__c</columns>
    <columns>Role_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Role_Title__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active with no Role Title</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>